Adjustement of instances creation
Related to issue #14